[project]
name = "logs-langchain"
version = "0.1.0"
description = "Log analysis in langchain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fabric>=3.2.2",
    "langchain-core>=0.3.59",
    "langchain-google-genai>=2.1.4",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
