[project]
name = "logs-langchain"
version = "0.1.0"
description = "Log analysis in langchain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.0.9",
    "dotenv>=0.9.9",
    "fabric>=3.2.2",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.59",
    "langchain-google-genai>=2.1.4",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.4.5",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.11.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
